[gd_scene load_steps=5 format=3 uid="uid://dxl04pv4sddgp"]

[ext_resource type="PackedScene" uid="uid://bkqgkgiak8ewb" path="res://UI/NewTurtleMenu/Weapon/WeaponPanel.tscn" id="1_478hx"]
[ext_resource type="Script" uid="uid://ccaj0lbi6tb3s" path="res://UI/NewTurtleMenu/TurtleMenu.gd" id="1_xx63j"]
[ext_resource type="Texture2D" uid="uid://cl2yoh2t47fa6" path="res://Statics/Shell/Shell.png" id="3_j8n3q"]
[ext_resource type="PackedScene" uid="uid://cdggtqwscrg1p" path="res://UI/NewTurtleMenu/Preview/Preview.tscn" id="4_wm7jb"]

[node name="TurtleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xx63j")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.141176, 0.0235294, 0.392157)

[node name="Level" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 49.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 45
text = "Level 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeaponButtons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LaserBeam" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 192.0
offset_right = 304.0
offset_bottom = 297.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.beam"
bonus1_label = "turtle.menu.beam.boost1"
bonus2_label = "turtle.menu.beam.boost2"

[node name="Laser" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 320.0
offset_right = 304.0
offset_bottom = 425.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.laser"
bonus1_label = "turtle.menu.laser.boost1"
bonus2_label = "turtle.menu.laser.boost2"

[node name="MultiShot" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 448.0
offset_right = 304.0
offset_bottom = 553.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.multishot"
bonus1_label = "turtle.menu.multishot.boost1"
bonus2_label = "turtle.menu.multishot.boost2"

[node name="PiratCanon" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 576.0
offset_right = 304.0
offset_bottom = 681.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.piratcanon"
bonus1_label = "turtle.menu.piratcanon.boost1"
bonus2_label = "turtle.menu.piratcanon.boost2"

[node name="UrsinCanon" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 704.0
offset_right = 304.0
offset_bottom = 809.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.ursincanon"
bonus1_label = "turtle.menu.ursincanon.boost1"
bonus2_label = "turtle.menu.ursincanon.boost2"

[node name="Shield" parent="WeaponButtons" instance=ExtResource("1_478hx")]
layout_mode = 2
offset_left = -696.0
offset_top = 832.0
offset_right = 304.0
offset_bottom = 937.0
size_flags_horizontal = 0
weapon_label = "turtle.menu.shield"
bonus1_label = "turtle.menu.shield.boost1"
bonus2_label = "turtle.menu.shield.boost2"

[node name="ShellInformation" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -83.0
offset_right = 384.0
grow_vertical = 0

[node name="WeaponCost" type="Label" parent="ShellInformation"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 3.0
theme_override_font_sizes/font_size = 60
text = "1/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShellInformation"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_j8n3q")

[node name="Preview" parent="." instance=ExtResource("4_wm7jb")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -348.0
offset_right = -64.0
offset_bottom = 356.0
grow_horizontal = 0
grow_vertical = 2

[connection signal="power_selected" from="WeaponButtons/LaserBeam" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/LaserBeam" to="Preview" method="_on_weapon_display"]
[connection signal="power_selected" from="WeaponButtons/Laser" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/Laser" to="Preview" method="_on_weapon_display"]
[connection signal="power_selected" from="WeaponButtons/MultiShot" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/MultiShot" to="Preview" method="_on_weapon_display"]
[connection signal="power_selected" from="WeaponButtons/PiratCanon" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/PiratCanon" to="Preview" method="_on_weapon_display"]
[connection signal="power_selected" from="WeaponButtons/UrsinCanon" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/UrsinCanon" to="Preview" method="_on_weapon_display"]
[connection signal="power_selected" from="WeaponButtons/Shield" to="." method="_on_power_selected"]
[connection signal="weapon_selected" from="WeaponButtons/Shield" to="Preview" method="_on_weapon_display"]
